examples/test/testpolicy19782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19782
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key43: value33
      key1: value24
      key3: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value26
          key4: value38
          key11: value42
      podSelector:
        matchLabels:
          key19: value46
          key45: value20
          key11: value32
